add friend crud, update swagger doc, update packages, spelling fixes
