# server/src/app/router.ts
@@ -12,6 +12,7 @@ import { isAuthorized } from '@/utils/middlewares';
 import { authRouter } from '@/resources/auth';
 import { bookmarksRouter } from '@/resources/bookmarks';
 import { filesRouter } from '@/resources/files';
+import { friendsRouter } from '@/resources/friends';
 import { postsRouter } from '@/resources/posts';
 import { profilesRouter } from '@/resources/profiles';
 import { sessionTokensRouter } from '@/resources/session-tokens';
@@ -34,6 +35,7 @@ router.use('/verifications', verificationsRouter);
 router.use('/api', isAuthorized);
 router.use('/api/v1/bookmarks', bookmarksRouter);
 router.use('/api/v1/files', filesRouter);
+router.use('/api/v1/friends', friendsRouter);
 router.use('/api/v1/posts', postsRouter);
 router.use('/api/v1/profiles', profilesRouter);
 router.use('/api/v1/session-tokens', sessionTokensRouter);
