# server/src/resources/friends/friends.router.ts
@@ -1,0 +1,32 @@
+import { Router } from 'express';
+import { checkFriend, checkUser, checkUserId } from './friends.middlewares';
+import {
+  approveFriend,
+  createFriend,
+  deleteFriend,
+  getFriends,
+  getMyRequests,
+  getRequests,
+} from './friends.controllers';
+
+export const friendsRouter = Router();
+
+friendsRouter
+  .get('/', getFriends)
+  .post('/:id', checkUserId, checkUser, checkFriend(), createFriend)
+  .delete(
+    '/:id',
+    checkUserId,
+    checkUser,
+    checkFriend({ notFoundError: true, skipPending: true }),
+    deleteFriend
+  )
+  .post(
+    '/:id/approve',
+    checkUserId,
+    checkUser,
+    checkFriend({ notFoundError: true, skipPending: true }),
+    approveFriend
+  )
+  .get('/requests', getRequests)
+  .get('/requests/my', getMyRequests);
